minor functionality added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,6 +82,11 @@
 
     </div>
 
+    <script>
+        document.querySelector('.focused').classList.remove("focused","bg-zinc-300")
+        document.querySelector('#home').classList.add("focused","bg-zinc-300")
+    </script>
+
     
 
     <%include ./partials/footer%>
