--- a/views/subscriptions.ejs
+++ b/views/subscriptions.ejs
@@ -1,30 +1,37 @@
 <% include ./partials/header.ejs %>
     <div class="right h-full flex-1 relative px-6">
-        <h1 class="my-6 font-medium text-3xl ml-2">Latest</h1>
-        <div class="videos flex flex-wrap justify-start overflow-y-auto h-[85vh] py-2 pb-10">
-         
-            <% videos.forEach(function(video){%>
-                
-                
-                <a href="/<%=video.type?'video/'+video._id:'playlist/'+video._id%>">
+        <%if(loggedUser){%>
+            <h1 class="my-6 font-medium text-3xl ml-2">Latest</h1>
+            <div class="videos flex flex-wrap justify-start overflow-y-auto h-[85vh] py-2 pb-10">
 
-                    <div class="w-[25.5vw] mb-2 mr-5 video">
-                        <div class="rounded-xl h-56 bg-zinc-200 mb-2 relative">
-                            <%if(video.thumbnail){%>
-                                <div class="thumbnail absolute top-0 left-0 w-full h-full z-[9] overflow-hidden bg-zinc-300 rounded-xl">
-                                    <img src="/uploads/images/<%=video.thumbnail%>"
-                                    class="w-full h-full object-cover" alt="">
-                                </div>
-                                <%}%>
-                                <%if(!video.type){%>
-                                    <div class="h-56 w-[96%] rounded-xl -top-2  absolute left-1/2 -translate-x-1/2 bg-zinc-300 "></div>
-                                    <div class="h-56 w-[98%] rounded-xl -top-1  absolute left-1/2 -translate-x-1/2 bg-zinc-400 "></div>
-                        
+                <% videos.forEach(function(video){%>
+
+
+                    <a href="/<%=video.type?'video/'+video._id:'playlist/'+video._id%>">
+
+                        <div class="w-[25.5vw] mb-2 mr-5 video">
+                            <div class="rounded-xl h-56 bg-zinc-200 mb-2 relative">
+                                <%if(video.thumbnail){%>
+                                    <div
+                                        class="thumbnail absolute top-0 left-0 w-full h-full z-[9] overflow-hidden bg-zinc-300 rounded-xl">
+                                        <img src="/uploads/images/<%=video.thumbnail%>"
+                                            class="w-full h-full object-cover" alt="">
+                                    </div>
                                     <%}%>
+                                        <%if(!video.type){%>
+                                            <div
+                                                class="h-56 w-[96%] rounded-xl -top-2  absolute left-1/2 -translate-x-1/2 bg-zinc-300 ">
+                                            </div>
+                                            <div
+                                                class="h-56 w-[98%] rounded-xl -top-1  absolute left-1/2 -translate-x-1/2 bg-zinc-400 ">
+                                            </div>
+
+                                            <%}%>
                             </div>
                             <a href="/channel/<%=video.user.username%>">
                                 <h2 class="leading-tight mb-1">
-                                    <%=video.description.length > 70 ? video.description.slice(0, 70) + " ..." : video.description%>
+                                    <%=video.description.length> 70 ? video.description.slice(0, 70) + " ..." :
+                                        video.description%>
                                 </h2>
                                 <h4 class="text-zinc-500 text-sm">
                                     <%=video.user.channel%>
@@ -34,27 +41,46 @@
                                         <%=video.views?video.views.length:0%> views
                                     </h4>
                                     <i class="ri-circle-fill text-[4px] mt-1"></i>
-                                    <h4 class="text-sm"><%=video.timespan %> ago</h4>
+                                    <h4 class="text-sm">
+                                        <%=video.timespan %> ago
+                                    </h4>
                                 </div>
                             </a>
                         </div>
                     </a>
-                <%})%>
+                    <%})%>
 
 
-        </div>
+            </div>
+            <%}else{%>
+                <div class="flex w-full h-full items-center pt-32 flex-col gap-5">
+                    <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24"
+                        viewBox="0 0 24 24" width="24" focusable="false"
+                        style="pointer-events: none; display: block; width: 11%; height: max-content;">
+                        <path d="M10 18v-6l5 3-5 3zm7-15H7v1h10V3zm3 3H4v1h16V6zm2 3H2v12h20V9zM3 10h18v10H3V10z">
+                        </path>
+                    </svg>
+                    <h1 class="text-2xl">Know more about you.</h1>
+                    <p class="text-sm leading-tight mb-3">Sign in to access videos that you’ve liked or saved</p>
+                    <a class="button google" href="/login/federated/google"><button
+                            class="flex items-center hover:bg-blue-100 hover:border-transparent text-blue-600 gap-1.5 border border-zinc-300 px-2.5 rounded-full">
+                            <i class="ri-account-circle-line text-2xl opacity-90 mt-[2px]"></i>
+                            <span class="text-sm font-medium">Sign in</span>
+                        </button></a>
+                </div>
+                <%}%>
 
     </div>
 
 
 
-    
+
     <script>
-        document.querySelector('.focused').classList.remove("focused","bg-zinc-300")
-        document.querySelector('#subscriptions').classList.add("focused","bg-zinc-300")
+        document.querySelector('.focused').classList.remove("focused", "bg-zinc-300")
+        document.querySelector('#subscriptions').classList.add("focused", "bg-zinc-300")
     </script>
 
-<% include ./partials/footer.ejs %>
+    <% include ./partials/footer.ejs %>
 
 
 
@@ -70,4 +96,4 @@
 
 
 
-<%include ./partials/footer.ejs%>
+        <%include ./partials/footer.ejs%>
